--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>ximmigrants</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/reset.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 	</head>
 	<body>
 
@@ -29,7 +31,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="https://i.imgur.com/XT6jhpL.png" alt="" />
+					<img src="img/me2.jpg" alt="me" />
 					<div class="inner">
 						<header>
 							<p>A responsive web site by <a href="#">Hector</a></p>
@@ -41,7 +43,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style2">
+			<section id="one" class="wrapper style1">
 				<div class="inner">
 					<div class="grid-style">
 
@@ -86,7 +88,7 @@
 			</section>
 
 		<!-- Two -->
-		
+
 
 		<!-- Three -->
 			<section id="three" class="wrapper style2">
