--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="img/me2.jpg" alt="me" />
+					<img src="http://via.placeholder.com/350x150" alt="me" />
 					<div class="inner">
 						<header>
 							<p>A responsive web site by <a href="#">Hector</a></p>
